add transition to Edit information module

--- a/NeuroApp/Storyboard/Profile.storyboard
+++ b/NeuroApp/Storyboard/Profile.storyboard
@@ -106,7 +106,7 @@
                         <outlet property="emailLabel" destination="lse-LA-AUi" id="rNq-0a-B6o"/>
                         <outlet property="eraseButton" destination="350-PJ-dyy" id="vQQ-pL-ptQ"/>
                         <outlet property="nameLabel" destination="bhh-Hv-EqL" id="OO9-GP-hHQ"/>
-                        <segue destination="HGt-lJ-s7U" kind="show" id="g0E-Su-Ce8"/>
+                        <segue destination="HGt-lJ-s7U" kind="show" identifier="editInformation" id="g0E-Su-Ce8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -118,20 +118,24 @@
             </objects>
             <point key="canvasLocation" x="1038.7850467289718" y="105.61555075593954"/>
         </scene>
-        <!--View Controller-->
+        <!--Edit Information View Controller-->
         <scene sceneID="AG8-Eo-93g">
             <objects>
-                <viewController id="HGt-lJ-s7U" sceneMemberID="viewController">
+                <viewController id="HGt-lJ-s7U" customClass="EditInformationViewController" customModule="NeuroApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Siq-8g-vAr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dK4-aY-ZGO" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="40" y="763" width="334" height="30"/>
+                                <rect key="frame" x="40" y="751" width="334" height="42"/>
                                 <color key="backgroundColor" name="NAGreen"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="DONE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="save:" destination="HGt-lJ-s7U" eventType="touchUpInside" id="3SH-jJ-TwY"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zkf-P0-gay">
                                 <rect key="frame" x="40" y="248.5" width="334" height="36"/>
@@ -194,8 +198,18 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qDK-er-eRJ"/>
+                    <connections>
+                        <outlet property="ageTextField" destination="HXr-TB-haD" id="kr8-ae-tb7"/>
+                        <outlet property="emailTextField" destination="6oe-Cb-nJh" id="ySP-ey-fGq"/>
+                        <outlet property="nameTextField" destination="PUi-EA-bJi" id="o7e-C2-mb5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DvQ-45-XX0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <customObject id="t3p-fX-lGQ" customClass="EditInformationModuleInitializer" customModule="NeuroApp" customModuleProvider="target">
+                    <connections>
+                        <outlet property="editinformationViewController" destination="HGt-lJ-s7U" id="r2O-L0-7Vc"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="1944.9275362318842" y="104.46428571428571"/>
         </scene>
