--- a/NeuroApp/Storyboard/Preview.storyboard
+++ b/NeuroApp/Storyboard/Preview.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,48 +16,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJf-2M-RPz" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="20" y="800" width="374" height="42"/>
-                                <color key="backgroundColor" name="NAGreen"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="begin:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="3EU-hV-voh"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s4z-nK-MJe">
-                                <rect key="frame" x="20" y="84" width="374" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BYg-cm-dTx">
-                                <rect key="frame" x="20" y="154" width="374" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xrI-rY-nFK">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gnz-TY-m64">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PV-ij-DsV">
+                                                <rect key="frame" x="20" y="20" width="374" height="30"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6XB-39-ulb">
+                                                <rect key="frame" x="20" y="70" width="374" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Wo-pw-vwY">
+                                                <rect key="frame" x="20" y="748" width="374" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="wX5-7N-5Ra"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <connections>
+                                                    <action selector="begin:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="vSD-Es-g3n"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="6XB-39-ulb" firstAttribute="leading" secondItem="gnz-TY-m64" secondAttribute="leading" constant="20" id="01Y-6H-k9e"/>
+                                            <constraint firstItem="3PV-ij-DsV" firstAttribute="leading" secondItem="gnz-TY-m64" secondAttribute="leading" constant="20" id="1Bm-nt-v9d"/>
+                                            <constraint firstItem="3PV-ij-DsV" firstAttribute="top" secondItem="gnz-TY-m64" secondAttribute="top" constant="20" id="FRU-J6-zhy"/>
+                                            <constraint firstAttribute="bottom" secondItem="1Wo-pw-vwY" secondAttribute="bottom" constant="20" id="QeD-R1-bf7"/>
+                                            <constraint firstItem="3PV-ij-DsV" firstAttribute="centerX" secondItem="gnz-TY-m64" secondAttribute="centerX" id="Rrn-AJ-zgl"/>
+                                            <constraint firstItem="1Wo-pw-vwY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6XB-39-ulb" secondAttribute="bottom" constant="20" id="SI9-ey-auS"/>
+                                            <constraint firstItem="6XB-39-ulb" firstAttribute="top" secondItem="3PV-ij-DsV" secondAttribute="bottom" constant="20" id="dQh-Y6-1P4"/>
+                                            <constraint firstItem="1Wo-pw-vwY" firstAttribute="leading" secondItem="gnz-TY-m64" secondAttribute="leading" constant="20" id="hyy-KC-zKz"/>
+                                            <constraint firstItem="6XB-39-ulb" firstAttribute="centerX" secondItem="gnz-TY-m64" secondAttribute="centerX" id="iqO-5i-F54"/>
+                                            <constraint firstItem="1Wo-pw-vwY" firstAttribute="centerX" secondItem="gnz-TY-m64" secondAttribute="centerX" id="lSg-UY-o9M"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="gnz-TY-m64" secondAttribute="bottom" id="BbE-EI-rcZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="gnz-TY-m64" secondAttribute="trailing" id="IxJ-7Z-gQf"/>
+                                    <constraint firstItem="gnz-TY-m64" firstAttribute="height" secondItem="xrI-rY-nFK" secondAttribute="height" priority="250" id="NuS-pQ-prw"/>
+                                    <constraint firstItem="gnz-TY-m64" firstAttribute="leading" secondItem="xrI-rY-nFK" secondAttribute="leading" id="fYT-IM-2I4"/>
+                                    <constraint firstItem="gnz-TY-m64" firstAttribute="width" secondItem="xrI-rY-nFK" secondAttribute="width" id="pjb-Fh-QaQ"/>
+                                    <constraint firstItem="gnz-TY-m64" firstAttribute="top" secondItem="xrI-rY-nFK" secondAttribute="top" id="zSP-y2-Ky2"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BYg-cm-dTx" secondAttribute="trailing" constant="20" id="6eH-aD-ciC"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="eJf-2M-RPz" secondAttribute="trailing" constant="20" id="FFQ-mD-Hjk"/>
-                            <constraint firstItem="eJf-2M-RPz" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BYg-cm-dTx" secondAttribute="bottom" constant="20" id="Mjz-LB-qqI"/>
-                            <constraint firstItem="BYg-cm-dTx" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Vc6-Wt-S7j"/>
-                            <constraint firstItem="s4z-nK-MJe" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="ZdA-Cg-rEC"/>
-                            <constraint firstItem="s4z-nK-MJe" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="cnh-dP-Hpm"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="eJf-2M-RPz" secondAttribute="bottom" constant="20" id="hM0-ab-SnH"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="s4z-nK-MJe" secondAttribute="trailing" constant="20" id="kzx-rw-gsZ"/>
-                            <constraint firstItem="eJf-2M-RPz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="nZ1-Sz-bKX"/>
-                            <constraint firstItem="BYg-cm-dTx" firstAttribute="top" secondItem="s4z-nK-MJe" secondAttribute="bottom" constant="40" id="wpp-Dh-Fip"/>
+                            <constraint firstItem="xrI-rY-nFK" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2iy-fY-tJc"/>
+                            <constraint firstItem="xrI-rY-nFK" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="49S-be-Oea"/>
+                            <constraint firstItem="xrI-rY-nFK" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="k7J-Wv-HiY"/>
+                            <constraint firstItem="xrI-rY-nFK" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rv8-zC-u0m"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="infoLabel" destination="BYg-cm-dTx" id="Nch-h4-gsh"/>
-                        <outlet property="titleLabel" destination="s4z-nK-MJe" id="YOB-r6-QRH"/>
+                        <outlet property="infoLabel" destination="6XB-39-ulb" id="oew-aA-jc0"/>
+                        <outlet property="titleLabel" destination="3PV-ij-DsV" id="PGE-8r-bVw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -68,13 +91,10 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="139" y="131"/>
+            <point key="canvasLocation" x="137.68115942028987" y="130.58035714285714"/>
         </scene>
     </scenes>
     <resources>
-        <namedColor name="NAGreen">
-            <color red="0.37999999523162842" green="0.80000001192092896" blue="0.45899999141693115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
